# workspace-browser

./: .gitignore  Makefile.am  applet.c  autogen.sh  browser.c  compat-gtk.h  configure.ac  index.html  main.c  menu-test.c  screenshot-0.0.1.xcf  wb-label.c  wb-label.h  window-menu-item.c  window-menu-item.h  workspace-browser-applet.server.in  workspace-browser.c  workspace-browser.h  workspace-button.c  workspace-button.h
